# PicoDVI-UART-Terminal

./: Readme.md
software/: CMakeLists.txt
software/apps/: CMakeLists.txt
software/apps/my_terminal/: .clang-format  CMakeLists.txt  chat_prep.py  compare.c  compile.sh  main.c  next_improvements.txt  output.txt  output.txt1  readme.md  tmds_encode_font_2bpp_c.c  tmds_encode_font_2bpp_c.h  tmds_palette.h
software/apps/my_terminal/font_work/: reamme.txt  run.sh  ttf2bmh.py
software/apps/my_terminal/font_work/Px437_IBM_VGA_8x16/: Px437_IBM_VGA_8x16.h
software/apps/my_terminal/font_work/Px437_TridentEarly_8x16/: Px437_TridentEarly_8x16.h
software/apps/my_terminal/font_work/Tamzen8x16b/: Tamzen8x16b.h
software/apps/my_terminal/font_work/Tamzen8x16r/: Tamzen8x16r.h
software/apps/my_terminal/font_work/archive/BM437/: font_8x16.h  main.py
software/apps/my_terminal/font_work/archive/PX/: font_8x16.h  main.py
software/apps/my_terminal/font_work/archive/python_font_create/: main.py
software/apps/my_terminal/font_work/archive/python_font_test/: font_8x16.h  main.py  run.sh
software/apps/my_terminal/font_work/archive/test/: font_8x16.h  main.py  main.pytest  run.sh
software/include/: common_dvi_pin_configs.h
